--- a/Day10/01_grid/grid,.html
+++ b/Day10/01_grid/grid,.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/grid.css">
 </head>
 <body>
-    < class="container">
+    <div class="container">
         
         <h2>grid default</h2>
         <div class="grid-container">
