--- a/Day13/index.html
+++ b/Day13/index.html
@@ -9,20 +9,25 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- 전체 영역 -->
     <div class="wrap">
+         <!-- 헤더 -->
         <header>
             <div class="innerHeader">
+                <!-- 로고 -->
                 <h1 class="logo">
                     <a href="index.html">
-                        <img scr="img/logo.pmg" alt="로고">
+                        <img src="img/logo.png" alt="로고">
                     </a>
                 </h1>
+
+                <!-- 메뉴 - GNB -->
                 <nav class="gnb">
                     <ul>
                         <li><a href="#">회사소개</a></li>
-                        <li><a href="#">회사소개</a></li>
-                        <li><a href="#">회사소개</a></li>
-                        <li><a href="#">회사소개</a></li>
+                        <li><a href="#">사업영역</a></li>
+                        <li><a href="#">투자정보</a></li>
+                        <li><a href="#">인재채용</a></li>
                     </ul>
                 </nav>
                 <nav class="tnb">
@@ -35,6 +40,7 @@
             </div>
         </header>
 
+        <!-- 섹션 : 메인 -->
         <section class="main">
             <div class="mainTitle">
                 <h2 class="en">A creative and competitive leading chemical company</h2>
@@ -45,6 +51,113 @@
                 </a>
             </div>
         </section>
+
+        <!-- 섹션 : about -->
+        <section class="about">
+            <div class="title">
+                <h2 class="en">ABOUT Hanwha Chemical <span>.</span></h2>
+                <p>대한민국 대표 석유화학 기업, <br class="mo"> 한화케미칼을 소개합니다.</p>
+            </div>
+
+            <ul>
+                <li>
+                    <a href="">
+                        <p class="img"><img src="img/about_1.jpg" alt="회사소개"></p>
+                        <div class="text">
+                            <h3>회사소개</h3>
+                            <p>삶의 가치를 높이는 기술기업, 한화케미칼</p>
+                            <p class="more">more</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <p class="img"><img src="img/about_2.jpg" alt="회사소개"></p>
+                        <div class="text">
+                            <h3>회사소개</h3>
+                            <p>삶의 가치를 높이는 기술기업, 한화케미칼</p>
+                            <p class="more">more</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <p class="img"><img src="img/about_3.jpg" alt="회사소개"></p>
+                        <div class="text">
+                            <h3>회사소개</h3>
+                            <p>삶의 가치를 높이는 기술기업, 한화케미칼</p>
+                            <p class="more">more</p>
+                        </div>
+                    </a>
+                </li>
+            </ul>
+        </section>
+
+         <!-- 섹션 : innovations -->
+         <section class="innovations">
+            <div class="title">
+                <h2 class="en">OUT PRODUCT innovations <span>.</span></h2>
+                <p>끊임없는 기술 혁신으로 미래 성장 동력을 <br class="mo"> 지속 발굴 합니다.</p>
+            </div>
+
+            <div class="imgBox">            
+                <div class="inner">
+                    <h3 class="en">01 <span>.</span> Chlorinated Polyviny1 Chlorids</h3>
+                    <div class="bottom">
+                        <p>
+                            한화케미칼은 국내에서 처음으로 자체 기술로 CPVC를 생산하는데 성공하고 2017년 울산 2공장에 연산 3만톤 규모의
+                            <br class="clear">
+                            공장을 건설해 생산 중입니다.
+                        </p>
+                        <a href="#">제품상세보기</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- 섹션 : me -->
+        <section class="me">
+            <div class="title">
+                <h2 class="en">CHALLENGE ME <span>.</span></h2>
+                <p>한화와 함꼐 꿈을 키워 갈 인재를 기다립니다.</p>
+            </div>
+            <ul class="list">
+                <!-- 직무소개 -->
+                <li>
+                    <h3><span><i class="fa fa-briefcase" aria-hidden="true"></i></span>직무특성 및 소개</h3>
+                    <p>한국 케미칼 산업의 역사를 이끌어 온 한화케미칼이 미래를 선도하는 글로벌 케미칼리더로 함께 성장해 나갈 인재를 모집합니다. <br>
+                        글로벌 시장 진출 및 사업다각화가 본격화됨에 따라 체계적 · 전문적인 인재 육성의 중요성을 인식하고, 그에 걸맞은 다양한 교육프로그램과 인사제도를 폭넓게 실시하고 있습니다.</p>  
+                    <a href="#" class="more">
+                        more
+                        <span><i class="fa fa-chevron-right" aria-hidden="true"></i></span>
+                    </a>
+                </li>
+                <!-- 인재상 -->
+                <li>
+                    <h3><span><i class="fa fa-user-circle-o" aria-hidden="true"></i></span>인재상</h3>
+                    <p>한화는 신용과 의리에 기반하여 ‘도전, 헌신, 정도’를 3대 핵심가치로 삼는 인재상을 추구하고 있습니다.</p>
+                    <ul class="in">
+                        <li>
+                            <em>Challenge</em><p>기존의 틀에 안주하지 않고 변화와 혁신을 통해 최고를 추구하는 도전적인 한화인</p>
+                        </li>
+                        <li>
+                            <em>Dedication</em><p>회사, 고객, 동료와의 인연을 소중히 여기고 큰 목표를 위해 혼신의 힘을 다하는 헌신적인 한화인</p>
+                        </li>
+                        <li> 
+                            <em>Intergrity</em><p>자긍심을 바탕으로 원칙에 따라 바르고 공정하게 행동하는 정도의 한화인</p>
+                        </li>
+                    </ul>
+                    <a href="#" class="more">
+                        more
+                        <span><i class="fa fa-chevron-right" aria-hidden="true"></i></span>
+                    </a>
+                </li>
+
+            </ul>
+            <button>한화인 채용사이트 바로가기</button>
+
+
+
+        
     </div>
 </body>
 </html>
