--- a/Day13/index.html
+++ b/Day13/index.html
@@ -110,9 +110,10 @@
                             공장을 건설해 생산 중입니다.
                         </p>
                         <a href="#">제품상세보기</a>
+                    </div>
                 </div>
             </div>
-        </div>
+        </section>
 
         <!-- 섹션 : me -->
         <section class="me">
@@ -154,7 +155,66 @@
 
             </ul>
             <button>한화인 채용사이트 바로가기</button>
+        </section>
 
+        <!-- 섹션 : sns -->
+        <section class="sns">
+            <div class="title">
+                <h2 class="en">SNS CHANNEL <span>.</span></h2>
+                <p>SNS를 통해 한화케미칼의 다양한 <br class="mo">모습을 만나보세요.</p>
+            </div>
+
+            <ul>
+                <li>
+                    <a href="#">
+                        <p class="img"><img src="img/blog_1.png" alt=""></p>
+                        <div class="bottom">
+                            <p class="color">화학캐스트</p>
+                            <p>자동차에 색을 입히는 기술, 아크릴 수지 도록</p>
+                            <p class="time">2022.02.14 <span>08:00</span> </p> 
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <p class="img"><img src="img/blog_2.jpg" alt=""></p>
+                        <div class="bottom">
+                            <p class="color">화학캐스트</p>
+                            <p>자동차에 색을 입히는 기술, 아크릴 수지 도록</p>
+                            <p class="time">2022.02.14 <span>08:00</span> </p> 
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <p class="img"><img src="img/blog_3.jpg" alt=""></p>
+                        <div class="bottom">
+                            <p class="color">화학캐스트</p>
+                            <p>자동차에 색을 입히는 기술, 아크릴 수지 도록</p>
+                            <p class="time">2022.02.14 <span>08:00</span> </p> 
+                        </div>
+                    </a>
+                </li>
+
+            </ul>
+        </section>
+
+        <!-- 푸터 -->
+        <footer>
+            <div class="inner">
+                <ul class="address">
+                    <li>04541 서울특별시 중구 청계천로 86 한화빌딩</li>
+                    <li>Copyright 2022.</li>
+                </ul>
+                <ul class="list">
+                    <li><a href="#">온라인 구매시스템</a></li>
+                    <li><a href="#">고객문의</a></li>
+                    <li><a href="#">공지사항</a></li>
+                    <li><a href="#">개인정보처리방침</a></li>
+                    <li><a href="#">FAMILY SITE</a></li>
+                </ul>
+            </div>
+        </footer>
 
 
         
